; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/x86emu/extr_x86emu.c_x86emuOp32_cmp_word_R_RM.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/x86emu/extr_x86emu.c_x86emuOp32_cmp_word_R_RM.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.x86emu = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.x86emu*)* @x86emuOp32_cmp_word_R_RM to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @x86emuOp32_cmp_word_R_RM(%struct.x86emu* %0) #0 {
  %2 = alloca %struct.x86emu*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  store %struct.x86emu* %0, %struct.x86emu** %2, align 8
  %5 = load %struct.x86emu*, %struct.x86emu** %2, align 8
  %6 = call i32 @fetch_decode_modrm(%struct.x86emu* %5)
  %7 = load %struct.x86emu*, %struct.x86emu** %2, align 8
  %8 = call i32* @decode_rh_long_register(%struct.x86emu* %7)
  store i32* %8, i32** %4, align 8
  %9 = load %struct.x86emu*, %struct.x86emu** %2, align 8
  %10 = call i32 @decode_and_fetch_long(%struct.x86emu* %9)
  store i32 %10, i32* %3, align 4
  %11 = load %struct.x86emu*, %struct.x86emu** %2, align 8
  %12 = load i32*, i32** %4, align 8
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* %3, align 4
  %15 = call i32 @cmp_long(%struct.x86emu* %11, i32 %13, i32 %14)
  ret void
}

declare dso_local i32 @fetch_decode_modrm(%struct.x86emu*) #1

declare dso_local i32* @decode_rh_long_register(%struct.x86emu*) #1

declare dso_local i32 @decode_and_fetch_long(%struct.x86emu*) #1

declare dso_local i32 @cmp_long(%struct.x86emu*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
